include_directories(${CMAKE_SOURCE_DIR}/include/ast)
include_directories(${CMAKE_SOURCE_DIR}/include/common)
include_directories(${CMAKE_SOURCE_DIR}/include/parser)
include_directories(${CMAKE_SOURCE_DIR}/build/src)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} source)
add_executable(test_pmysql ${source})

target_compile_options(test_pmysql PUBLIC -Wall -Wextra)
target_link_libraries(test_pmysql PUBLIC libparser libast coverage_config)

add_test(NAME simple_exec COMMAND ./test_pmysql)
add_test(NAME Simple_tableless COMMAND ./test_pmysql "select high_priority sql_small_result 1 + 1 as a;")
add_test(NAME simple_select COMMAND ./test_pmysql "select * from a;")
add_test(NAME select_alias COMMAND ./test_pmysql "select * from a as b;")
add_test(NAME select_opt_alias COMMAND ./test_pmysql "select distinct row1 as b from a;")
add_test(NAME select_opt_alias_where COMMAND ./test_pmysql "select distinct row1 as b from a where c = 'abc';")
add_test(NAME select_multi_table COMMAND ./test_pmysql "select row1, row2 from a, b where a.row1 = b.row2;")
add_test(NAME select_join COMMAND ./test_pmysql "select row1, *, row2 from a join b on a.row1 = b.row2;")
add_test(NAME select_join_using COMMAND ./test_pmysql "select row1, *, row2 from a join b using (row1);")
add_test(NAME select_straight_join COMMAND ./test_pmysql "SELECT * FROM t1 STRAIGHT_JOIN (t2, t3, t4) ON (t2.a = t1.a AND t3.b = t1.b AND t4.c = t1.c);")
add_test(NAME select_straight_join_simple COMMAND ./test_pmysql "SELECT * FROM t1 STRAIGHT_JOIN (t2, t3, t4);")
add_test(NAME select_join_factor COMMAND ./test_pmysql "SELECT * FROM t1 LEFT JOIN (t2, t3, t4) ON (t2.a = t1.a AND t3.b = t1.b AND t4.c = t1.c);")
add_test(NAME select_join_factor_multi COMMAND ./test_pmysql "SELECT * FROM t1 LEFT JOIN (t2 CROSS JOIN t3 CROSS JOIN t4) ON (t2.a = t1.a AND t3.b = t1.b AND t4.c = t1.c);")
add_test(NAME select_subquery COMMAND ./test_pmysql "select row1, *, row2 from (select * from db.b use key (i_test, i_test2) where row1 = 1) t1;")
