include_directories(${CMAKE_SOURCE_DIR}/include/ast)
include_directories(${CMAKE_SOURCE_DIR}/include/common)
include_directories(${CMAKE_SOURCE_DIR}/include/parser)
include_directories(${CMAKE_SOURCE_DIR}/build/src)

AUX_SOURCE_DIRECTORY(${CMAKE_CURRENT_SOURCE_DIR} source)
add_executable(test_pmysql ${source})

target_compile_options(test_pmysql PUBLIC -Wall -Wextra)
target_link_libraries(test_pmysql PUBLIC libparser libast coverage_config)

add_test(NAME simple_exec COMMAND ./test_pmysql)
add_test(NAME Simple_tableless COMMAND ./test_pmysql "select high_priority sql_small_result 1 + 1 as a;")
add_test(NAME simple_select COMMAND ./test_pmysql "select a.* from a limit 1 into aaa;")
add_test(NAME select_alias COMMAND ./test_pmysql "select * from a as b;")
add_test(NAME select_opt_alias COMMAND ./test_pmysql "select distinct row1 as b from a;")
add_test(NAME select_opt_alias_where COMMAND ./test_pmysql "select distinct row1 as b from a where c = 'abc';")
add_test(NAME select_multi_table COMMAND ./test_pmysql "select row1, row2 from a, b where a.row1 = b.row2;")
add_test(NAME select_join COMMAND ./test_pmysql "select row1, *, row2 from a join b on a.row1 = b.row2;")
add_test(NAME select_join_using COMMAND ./test_pmysql "select row1, *, row2 from a join b using (row1, row2);")
add_test(NAME select_straight_join COMMAND ./test_pmysql "SELECT * FROM t1 STRAIGHT_JOIN (t2, t3, t4) ON (t2.a = t1.a AND t3.b = t1.b AND t4.c = t1.c);")
add_test(NAME select_straight_join_simple COMMAND ./test_pmysql "SELECT * FROM t1 STRAIGHT_JOIN (t2, t3, t4);")
add_test(NAME select_join_factor COMMAND ./test_pmysql "SELECT * FROM t1 LEFT JOIN (t2, t3, t4) ON (t2.a = t1.a AND t3.b = t1.b AND t4.c = t1.c);")
add_test(NAME select_join_factor_multi COMMAND ./test_pmysql "SELECT * FROM t1 LEFT JOIN (t2 CROSS JOIN t3 CROSS JOIN t4) ON (t2.a = t1.a AND t3.b = t1.b AND t4.c = t1.c);")
add_test(NAME select_subquery COMMAND ./test_pmysql "select row1, *, row2 from (select * from db.b use key (i_test, i_test2) where row1 = 1) t1;")
add_test(NAME select_group_by COMMAND ./test_pmysql "select row1, row2 from a where row1 = 1 and row2 > 3 and row2 != 3 group by row2, row3 having sum(row2) > 10 order by row3 desc, row2 asc limit 10, 1;")
add_test(NAME simple_insert COMMAND ./test_pmysql "insert into a (row1, row2) values (1, 2), (1, 3);")
add_test(NAME simple_dup_insert COMMAND ./test_pmysql "insert into a (row1, row2) values (1, 2) on duplicate key update row2 = 1;")
add_test(NAME set_insert COMMAND ./test_pmysql "insert a set row1=1, row2=3;")
add_test(NAME select_insert COMMAND ./test_pmysql "insert into a(row1, row2) select row1, row2 from c;")
add_test(NAME simple_replace COMMAND ./test_pmysql "replace into a (row1, row2) values (1, 2), (1, 3);")
add_test(NAME simple_dup_replace COMMAND ./test_pmysql "replace into a (row1, row2) values (1, 2) on duplicate key update row2 = 1;")
add_test(NAME set_replace COMMAND ./test_pmysql "replace a set row1=1, row2=3;")
add_test(NAME select_replace COMMAND ./test_pmysql "replace into a(row1, row2) select row1, row2 from c;")
add_test(NAME simple_update COMMAND ./test_pmysql "update a set row0 = 0, a.row1 = 1, a.row3 = 2 where a.row2 = 2;")
add_test(NAME simple_update2 COMMAND ./test_pmysql "update a set a.row1 = 1, row3 = 2 where a.row2 = 2;")
add_test(NAME simple_delete COMMAND ./test_pmysql "delete from a where a.row1 = 123 and a.row2 = 123;")
add_test(NAME multi_delete COMMAND ./test_pmysql "DELETE t1, t2 FROM t1 INNER JOIN t2 INNER JOIN t3 WHERE t1.id=t2.id AND t2.id=t3.id;")
add_test(NAME simple_set COMMAND ./test_pmysql "set @uservar1 = 123, @uservar2 = 123;")
add_test(NAME simple_create_db COMMAND ./test_pmysql "create database db1;")
add_test(NAME simple_create_table COMMAND ./test_pmysql "create table t1 (f1 int, f2 double);")
